# silva-bruus-multiscattering

./: .gitignore  AGENTS.md  README.md  REVISAO_01_E_TAREFA_T01_SILVA_BRUUS.md  TAREFA_T02_FORMULA_CORRIGIDA_E_FIGURA_2.md  TAREFA_T03_NUCLEO_MULTIPOLAR_SOLVER_RAYLEIGH.md  TAREFA_T04_1_FECHAMENTO_TESTES_DOCUMENTACAO.md  TAREFA_T04_FORCA_INTERACAO_MS_RAYLEIGH.md  TAREFA_T05_1_FECHAMENTO_METRICAS_TESTES_DOCUMENTACAO.md  TAREFA_T05_PRIMEIROS_CLUSTERS_N3_MULTIBODY.md  TASKS.md  pyproject.toml
docs/: CONVENTIONS.md  DECISIONS.md  HANDOFF.md
results/data/: figure_2_relative_error.csv  t03_solver_validation.csv  t04_pair_force_validation.csv  t05_trimer_regression.csv  t05_trimer_sweep.csv
scripts/: reproduce_figure_2.py  validate_t03_solver.py  validate_t04_force.py  validate_t05_trimers.py
src/acoustic_ms/: __init__.py  comparison.py  contrasts.py  corrected_pair.py  force.py  gaunt.py  geometries.py  incident.py  metrics.py  multipoles.py  scattering.py  silva_bruus.py  solver.py  special.py  translation.py
tests/: test_contrasts.py  test_corrected_pair.py  test_force.py  test_gaunt.py  test_incident.py  test_multibody.py  test_multipoles.py  test_scattering.py  test_silva_bruus.py  test_solver.py  test_special.py  test_translation.py
