[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic-ms"
version = "0.1.0"
description = "Initial tools for nodal acoustic interaction forces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "scipy>=1.15", "sympy>=1.13"]

[project.optional-dependencies]
dev = ["pytest>=8"]
plot = ["matplotlib>=3.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
